--- a/bjs/08_if_else/index.html
+++ b/bjs/08_if_else/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
+<header>Угадайка!</header>
+<article>
 <div class="container">
     <div class="row game-card align-items-center">
         <div class="col col-md-4 offset-md-4">
@@ -25,9 +27,9 @@
                 </div>
                 <div class="card-body">
                     <div class="btn-group">
-                        <button class="btn btn-info" id="btnLess">&#129047;<br>меньше</button>
-                        <button class="btn btn-success btn-lg" id="btnEqual">Верно!</button>
-                        <button class="btn btn-info" id="btnOver">больше<br>&#129045;</button>
+                        <button class="btn" id="btnLess">&#129047;<br>меньше</button>
+                        <button class="btn btn-lg" id="btnEqual">Верно!</button>
+                        <button class="btn" id="btnOver">больше<br>&#129045;</button>
                     </div>
                 </div>
                 <div class="card-footer">
@@ -38,5 +40,6 @@
     </div>
 </div>
 <script src="script.js"></script>
+</article>
 </body>
 </html>
