--- a/bjs/08_if_else/index.html
+++ b/bjs/08_if_else/index.html
@@ -9,27 +9,25 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
-<header>Угадайка!</header>
-<article>
 <div class="container">
     <div class="row game-card align-items-center">
         <div class="col col-md-4 offset-md-4">
             <div class="card text-center">
                 <div class="card-header">
-                    <p class="m-0">Вопрос №<span id="orderNumberField">5</span></p>
+                    <p class="m-0">Вопрос №<span id="orderNumberField">1</span></p>
                 </div>
                 <div class="card-body">
                     <div class="row no-gutters">
                         <div class="col">
-                            <h3 class="card-title m-0"><span id="answerField">Вы загадали число 5?</span></h3>
+                            <h3 class="card-title m-0"><span id="answerField">Вы загадали число 0?</span></h3>
                         </div>
                     </div>
                 </div>
                 <div class="card-body">
                     <div class="btn-group">
-                        <button class="btn" id="btnLess">&#129047;<br>меньше</button>
-                        <button class="btn btn-lg" id="btnEqual">Верно!</button>
-                        <button class="btn" id="btnOver">больше<br>&#129045;</button>
+                        <button class="btn btn-info" id="btnLess">&#129047;<br>меньше</button>
+                        <button class="btn btn-success btn-lg" id="btnEqual">Верно!</button>
+                        <button class="btn btn-info" id="btnOver">больше<br>&#129045;</button>
                     </div>
                 </div>
                 <div class="card-footer">
@@ -39,7 +37,6 @@
         </div>
     </div>
 </div>
-<script src="script.js"></script>
-</article>
 </body>
+<script src="script.js"></script>
 </html>
