--- a/bjs/07_Number_and_string/index.html
+++ b/bjs/07_Number_and_string/index.html
@@ -21,56 +21,56 @@
                                 <button class="btn btn-outline-danger form-control" id="btn_clr">C</button>
                             </div>
                             <div class="row no-gutters">
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_1">1</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_1">1</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_2">2</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_2">2</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_3">3</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_3">3</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_sum">+</button>
-                            </div>
-                            <div class="row no-gutters">
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_4">4</button>
-                            </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_5">5</button>
-                            </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_6">6</button>
-                            </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_def">-</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_sum">+</button>
                             </div>
                             <div class="row no-gutters">
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_7">7</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_4">4</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_8">8</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_5">5</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_9">9</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_6">6</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_by">*</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_min">-</button>
                             </div>
                             <div class="row no-gutters">
-                            <div class="col">
-                            <button class="btn btn-outline-primary form-control" id="btn_calc">=</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_7">7</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_0">0</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_8">8</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_sqr">^</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_9">9</button>
                             </div>
-                            <div class="col">
-                                <button class="btn btn-outline-primary form-control" id="btn_dev">/</button>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_by">*</button>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_eq">=</button>
+                            </div>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_0">0</button>
+                            </div>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_sqrt">√</button>
+                            </div>
+                                <div class="col">
+                                    <button class="btn btn-outline-white form-control" id="btn_dev">/</button>
                             </div>
                         </div>
                     </div>
@@ -78,7 +78,6 @@
             </div>
         </div>
     </div>
-</div>
 <script src="script.js"></script>
 </body>
 </html>
